Corrected the overflow of analytics wrapper

--- a/system/cms/themes/pyrocms/css/workless.css
+++ b/system/cms/themes/pyrocms/css/workless.css
@@ -2191,7 +2191,7 @@ Ensure your main styling comes before this!
 	}
 	
 	#analyticsWrapper, #analytics {
-		width: 982px;	
+		width: 976px;	
 	}
 	
 	section#content {
